@@ -15,6 +15,8 @@
 #define Q_V2_SETQLIM	0x0700	/* Set only limits */
 #define Q_V2_GETINFO	0x0900	/* Get information about quota */
 #define Q_V2_SETINFO	0x0A00	/* Set information about quota */
+#define Q_V2_SETGRACE	0x0B00	/* Set just grace times in quotafile information */
+#define Q_V2_SETFLAGS	0x0C00	/* Set just flags in quotafile information */
 #define Q_V2_GETSTATS	0x1100	/* get collected stats (before proc was used) */
 
 /* Structure for format specific information */
