@@ -1,6 +1,12 @@
 Changes in quota-tools from 3.01 to ????
 
 * added -n option (don't resolve names) to repquota (Jan Kara)
+* quota tools now correctly handle zero grace times in old format (Jan Kara)
+* edquota, setquota commit just grace times and flags - fixed possible races
+  when used on live filesystem (Jan Kara)
+* another fix to quotastats (Jan Kara)
+* added check to format detection for bad endianity (Jan Kara)
+* implemented conversion of files with bad endianity (Jan Kara)
 
 Changes in quota-tools from 3.01-final to 3.01
 
